node_firmware/build/log/idf_py_stdout_output_13948
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D "D:\nipun prev laptop\final_year\idf_files\node_firmware\build\bootloader\esp-idf\esptool_py" && D:\Espressif\python_env\idf5.0_py3.8_env\Scripts\python.exe D:/Espressif/frameworks/esp-idf-v5.0/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 "D:/nipun prev laptop/final_year/idf_files/node_firmware/build/bootloader/bootloader.bin""
Bootloader binary size 0x6700 bytes. 0x900 bytes (8%) free.
[2/7] Building C object esp-idf/ads1115/CMakeFiles/__idf_ads1115.dir/ads1115.c.obj
FAILED: esp-idf/ads1115/CMakeFiles/__idf_ads1115.dir/ads1115.c.obj 
ccache D:\Espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe  -I"D:/nipun prev laptop/final_year/idf_files/node_firmware/build/config" -I"D:/nipun prev laptop/final_year/idf_files/node_firmware/components/ads1115/include" -ID:/Espressif/frameworks/esp-idf-v5.0/components/newlib/platform_include -ID:/Espressif/frameworks/esp-idf-v5.0/components/freertos/FreeRTOS-Kernel/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/freertos/esp_additions/include/freertos -ID:/Espressif/frameworks/esp-idf-v5.0/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/freertos/esp_additions/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/esp_hw_support/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/esp_hw_support/include/soc -ID:/Espressif/frameworks/esp-idf-v5.0/components/esp_hw_support/include/soc/esp32 -ID:/Espressif/frameworks/esp-idf-v5.0/components/esp_hw_support/port/esp32/. -ID:/Espressif/frameworks/esp-idf-v5.0/components/esp_hw_support/port/esp32/private_include -ID:/Espressif/frameworks/esp-idf-v5.0/components/heap/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/log/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/soc/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/soc/esp32/. -ID:/Espressif/frameworks/esp-idf-v5.0/components/soc/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/hal/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/hal/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/hal/platform_port/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/esp_rom/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/esp_rom/include/esp32 -ID:/Espressif/frameworks/esp-idf-v5.0/components/esp_rom/esp32 -ID:/Espressif/frameworks/esp-idf-v5.0/components/esp_common/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/esp_system/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/esp_system/port/soc -ID:/Espressif/frameworks/esp-idf-v5.0/components/esp_system/port/include/private -ID:/Espressif/frameworks/esp-idf-v5.0/components/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/xtensa/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/lwip/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/lwip/include/apps -ID:/Espressif/frameworks/esp-idf-v5.0/components/lwip/include/apps/sntp -ID:/Espressif/frameworks/esp-idf-v5.0/components/lwip/lwip/src/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/lwip/port/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/lwip/port/esp32/include/arch -ID:/Espressif/frameworks/esp-idf-v5.0/components/driver/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/driver/deprecated -ID:/Espressif/frameworks/esp-idf-v5.0/components/driver/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/esp_pm/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/esp_ringbuf/include -ID:/Espressif/frameworks/esp-idf-v5.0/components/esp_timer/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og "-fmacro-prefix-map=D:/nipun prev laptop/final_year/idf_files/node_firmware=." -fmacro-prefix-map=D:/Espressif/frameworks/esp-idf-v5.0=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/ads1115/CMakeFiles/__idf_ads1115.dir/ads1115.c.obj -MF esp-idf\ads1115\CMakeFiles\__idf_ads1115.dir\ads1115.c.obj.d -o esp-idf/ads1115/CMakeFiles/__idf_ads1115.dir/ads1115.c.obj -c "D:/nipun prev laptop/final_year/idf_files/node_firmware/components/ads1115/ads1115.c"
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/ads1115/ads1115.c: In function 'adc_log':
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/ads1115/ads1115.c:317:33: warning: dereferencing 'void *' pointer
  317 |         (payload_t*)pvParameters->sensor_data1 = r1;
      |                                 ^~
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/ads1115/ads1115.c:317:33: error: request for member 'sensor_data1' in something not a structure or union
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/ads1115/ads1115.c:326:33: warning: dereferencing 'void *' pointer
  326 |         (payload_t*)pvParameters->sensor_data2 = r2;
      |                                 ^~
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/ads1115/ads1115.c:326:33: error: request for member 'sensor_data2' in something not a structure or union
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/ads1115/ads1115.c:335:33: warning: dereferencing 'void *' pointer
  335 |         (payload_t*)pvParameters->sensor_data3 = r3;
      |                                 ^~
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/ads1115/ads1115.c:335:33: error: request for member 'sensor_data3' in something not a structure or union
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/ads1115/ads1115.c:344:33: warning: dereferencing 'void *' pointer
  344 |         (payload_t*)pvParameters->sensor_data4 = r4;
      |                                 ^~
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/ads1115/ads1115.c:344:33: error: request for member 'sensor_data4' in something not a structure or union
ninja: build stopped: subcommand failed.
